# esi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yml
esi/: Cargo.toml
esi/src/: config.rs  document.rs  error.rs  esi_dollar_structs.rs  lib.rs  parse.rs  string_functions.rs  symbols.rs  vars.rs
esi/tests/: parse.rs
esi_example_app/: Cargo.toml  fastly.toml
esi_example_app/src/: index.html  main.rs
examples/esi_example_advanced_error_handling/: Cargo.toml  fastly.toml
examples/esi_example_advanced_error_handling/src/: error.html.fragment  index.html  main.rs
examples/esi_example_minimal/: Cargo.toml  fastly.toml
examples/esi_example_minimal/.cargo/: config.toml
examples/esi_example_minimal/src/: document.xml  index.html  main.rs
examples/esi_try_example/: Cargo.toml  fastly.toml
examples/esi_try_example/src/: index.html  main.rs
