[package]
name = "esi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "A streaming parser and executor for Edge Side Includes"
repository = "https://github.com/fastly/esi"
readme = "./README.md"

[dependencies]
quick-xml = "0.36.0"
thiserror = "^1.0"
fastly = "^0.11"
log = "^0.4"

[dev-dependencies]
env_logger = "^0.11"
