[package]
name = "esi_example_advanced_error_handling"
version = "0.4.0-pre3"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
publish = false

[dependencies]
fastly = "^0.9"
esi = { path = "../../esi" }
quick-xml = "0.27.1"
log = "^0.4"
env_logger = "=0.9.3" # 0.10.0 requires nightly
