[package]
name = "esi_example_advanced_error_handling"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
fastly = "^0.10"
esi = { path = "../../esi" }
quick-xml = "0.36.0"
log = "^0.4"
env_logger = "^0.11" # 0.10.0 requires nightly
